Fixed Card Spacing

--- a/src/App.css
+++ b/src/App.css
@@ -6,20 +6,22 @@
 /* EventCard common componant css */
 
 .EventCards {
-  background: rgba(21, 21, 36, 0.35);
-  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-  backdrop-filter: blur(7.9px);
-  -webkit-backdrop-filter: blur(7.9px);
-  border-radius: 7%;
+  -webkit-box-shadow: 0px 0px 30px 4px rgba(156,75,255,1);
+  -moz-box-shadow: 0px 0px 30px 4px rgba(156,75,255,1);
+  box-shadow: 0px 0px 30px 4px rgba(156,75,255,1);
+  border-radius: 16px !important;
   border: 1px solid rgb(156, 75, 255);
-}
-
-.EventCards > .MuiPaper-root {
-  border-radius: 7%;
+  max-width: 345px;
+  background-color: #151524 !important;
+  margin-right: 5%;
 }
 
 .Componants {
   margin: 5%;
+}
+
+.ParticipateDiv {
+  flex-direction: row-reverse;
 }
 
 /* EventCard common componant css Ends here. */
@@ -126,7 +128,7 @@
 
 .AboutUsHeading {
   position: relative;
-  margin-bottom: 8%;
+  margin-bottom: 4%;
 }
 
 .AboutUsbg p {
@@ -190,7 +192,7 @@
 
 .EventsHeading {
   position: relative;
-  margin-bottom: 8%;
+  margin-bottom: 4%;
 }
 
 .Eventsbg p {
@@ -205,15 +207,15 @@
   color: #fff;
 }
 
-.EventsCards {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around;
-}
-
 .EventsCardsDiv {
   display: flex;
   flex-direction: column;
+}
+
+.ThreeEventCards {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
 }
 
 .expired-notice {
